--- a/Lecture3/lecture3/tasks/templates/tasks/index.html
+++ b/Lecture3/lecture3/tasks/templates/tasks/index.html
@@ -1,4 +1,17 @@
-<!DOCTYPE html>
+<!-- with layout.html -->
+{% extends "tasks/layout.html" %}
+
+{% block body %}
+    <h1>Tasks</h1>  
+    <ul>
+        {% for task in tasks %}
+            <li>{{ task }}</li>
+        {% endfor %}
+    </ul>
+    <a href="{% url 'tasks:add' %}">Add a New Task</a>
+{% endblock %}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>Tasks</title>
@@ -6,12 +19,13 @@
     </head>
     <body>
         <ul>
+             -->
             <!-- <li>item one</li>
             <li>item two</li>
-            <li>item three</li> -->
-            {% for task in tasks %}
+            <li>item three</li>  -->
+            <!-- {% for task in tasks %}
                 <li>{{ task }}</li>
             {% endfor %}
         </ul>
     </body>
-</html>
+</html> --> 
